# claude-harness

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  INSTALL.md  README.md  ama_monitor.py  ama_orchestrator.py  architecture_summary.md  clear_progress.py  cli.py  config.py  live_monitoring.py  main.py  pyproject.toml  requirements.txt  update-package.sh
.archived_artifacts/: human_feedback_20260404_224705.md  human_feedback_20260405_172649.md  human_feedback_20260405_205201.md  human_feedback_20260406_152523.md  human_feedback_20260406_160935.md  human_feedback_20260406_224230.md  human_feedback_20260406_230606.md  human_feedback_20260407_004712.md  risk_assessment_20260407_011117.md  worker_1_output_20260404_155046.md  worker_1_output_20260405_232540.md  worker_1_output_20260406_162837.md  worker_1_output_20260407_012824.md
.archived_memory/: phase_1_memory_20260407_142130.md  planning_phase_memory.md
ama_safeguards/: __init__.py  circuit_breaker.py  rate_limiter.py  status_writer.py
claude_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: __init__.py  __main__.py
documentation/: DEVELOPER_DOCS.md  INSTALL.md
homebrew-tap/Formula/: harness.rb
linux-install/: install-linux.sh
src/: helpers.py
src/agents/: __init__.py  orchestrator.py  worker.py
src/helpers/: __init__.py  common.py  execution.py  planning.py
src/prompts/: loader.py
src/prompts/agents/: worker.yaml
src/prompts/workflows/: execution.yaml  plan_refinement.yaml
src/safeguards/: __init__.py  circuit_breaker.py  exit_gate.py  rate_limiter.py  status_writer.py
src/workflows/: __init__.py  execution.py  plan_refinement.py
tests/: test_circuit_breaker.py  test_exit_gate.py  test_helpers_execution.py  test_integration.py  test_rate_limiter.py
