[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-harness"
version = "1.0.0"
description = "Claude Autonomous Harness - Run AI-powered development workflows on any project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.0.0",
    "PyYAML>=6.0",
    "click>=8.0.0",
]

[project.scripts]
harness = "cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["src*", "config", "cli"]

[tool.setuptools.package-data]
"src.prompts" = ["*.yaml"]
