[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-harness"
version = "0.1.2"
description = "Claude Autonomous Harness - Run AI-powered development workflows on any project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.0.0",
    "PyYAML>=6.0",
    "click>=8.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
harness = "cli.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli"]

[tool.setuptools.package-data]
"src.prompts" = ["**/*.yaml"]
